progs/cpp/4a31f877-7042-4dc8-ab4e-05e8c6fa6dbc/err.txt
progs/cpp/4a31f877-7042-4dc8-ab4e-05e8c6fa6dbc/prog.cpp:6:14: warning: missing terminating " character [enabled by default]
       cout <<";
              ^
progs/cpp/4a31f877-7042-4dc8-ab4e-05e8c6fa6dbc/prog.cpp:6:7: error: missing terminating " character
       cout <<";
       ^
progs/cpp/4a31f877-7042-4dc8-ab4e-05e8c6fa6dbc/prog.cpp: In function ‘int main()’:
progs/cpp/4a31f877-7042-4dc8-ab4e-05e8c6fa6dbc/prog.cpp:7:7: error: expected primary-expression before ‘return’
       return 0;
       ^
progs/cpp/4a31f877-7042-4dc8-ab4e-05e8c6fa6dbc/prog.cpp:7:7: error: expected ‘;’ before ‘return’
